# wiki-scraper

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml  run_scraper.py
.github/workflows/: tests.yml
analysis/: analysis.ipynb  analysis.py
analysis/.ipynb_checkpoints/: analysis-checkpoint.ipynb  analysis-checkpoint.py
analysis/word_counts/: get_word_counts_outside_wiki.py
analysis/word_counts/bad_article/: word-counts.json
analysis/word_counts/english/: word-counts.json
analysis/word_counts/long_article/: word-counts.json
analysis/word_counts/polish/: word-counts.json
analysis/word_counts/spanish/: word-counts.json
src/mc_wiki_scraper/: __init__.py
src/mc_wiki_scraper/cli/: __init__.py  args.py  mode_builder.py
src/mc_wiki_scraper/modes/: analyze_frequency.py  auto_count_words.py  count_words.py
src/mc_wiki_scraper/wiki_page/: core.py
src/mc_wiki_scraper/wiki_page/utils/: __init__.py  paragraphs.py  tables.py
src/wiki_scraper/: __init__.py
src/wiki_scraper/cli/: __init__.py  args.py  mode_builder.py  scraper.py
src/wiki_scraper/modes/: __init__.py  auto_count_words.py  count_words.py  summary.py
src/wiki_scraper/wiki_page/: __init__.py  core.py
src/wiki_scraper/wiki_page/utils/: __init__.py  links.py  paragraphs.py  word_counts.py
tests/: Bee.html  test_units.py  wiki_scraper_integration_test.py
tests/integration/: test_count_words.py  test_summary.py
tests/test_files/: Bee.html  Creeper.html
tests/units/: test_args.py  test_info_util.py  test_paragraphs_util.py  test_word_counts_util.py
wiki_scraper/: cli.py  mode_builder.py  page_fetcher.py  wiki_scraper.py
wiki_scraper/modes/: analyze_frequency.py  auto_count_words.py  count_words.py  summary.py  table.py
wiki_scraper/wiki_page/: __init__.py  fetch.py  info.py  links.py  paragraphs.py  parse.py  tables.py  wiki_page.py  word_counts.py
wiki_scraper/wiki_page/utils/: fetch.py  info.py  tables.py
