[project]
name = "mc-wiki-scraper"
version = "0.1.6"
description = "Scrape and analyze articles from minecraft.wiki"
authors = [{name = "Oskar Rowicki", email = "oskar.rowicki@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"

keywords = ["minecraft", "wiki", "scraping", "text-analysis", "nlp"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python',
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing",
]

dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.4.1",
    "matplotlib>=3.10.8",
    "wordfreq>=3.1.1",
    "beautifulsoup4>=4.13.0",
    "regex>=2026.1.15",
    "requests>=2.31"
]

[project.optional-dependencies]
test = ["pytest>=9.0.2"]

[project.scripts]
mc-wiki-scraper = "mc_wiki_scraper.cli.scraper:main"

[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project.urls]
"source" = "https://github.com/orowicki/wiki-scraper"
